# angioSegmentation

./: .gitignore  README.md  analysis_log.md  analysis_summary.md  context.txt  cursorrules  label_config.json  packageProject.py  pyproject.toml  pytest.ini  requirements.txt  roadmapContext.md
Lit Review/dataset/: README.md  metadata.json
data_schema/: cvat_labeling_schema_2025.03.json  vascular_labeling_guidelines_2025.03.md
dr_sam/: segment.py
dr_sam/src/anomality_detection/: __init__.py  detection_algorithms.py  skeletonize.py
dr_sam/src/segmentation/: __init__.py  predictors.py
dr_sam_core/: requirements.txt
dr_sam_core/anomality_detection/: __init__.py  detection_algorithms.py  skeletonize.py
dr_sam_core/segmentation/: __init__.py  predictors.py
preprocessing/: bounding_boxes.py  transforms.py
segmentation/: segment_vessels.py  segmentationPipeline.py
tests/: README.md  __init__.py  base_test.py  cleanup.py  cleanupTests.py  conftest.py  pytest.ini  requirements-dev.txt  test_drsam_validation.py  test_multiple_frame_pipeline.py  test_original_drsam.py  test_schema_validation.py  test_single_frame_pipeline.py  testingFramework-toDOs.md  testingMaster.py
tests/originalDrSAM/: __init__.py  dr_sam_validator.py  drsam_testing_utils.py
tests/test_data/single_frame/SFA mask and stenosis/: metadata.json
tests/test_utils/: drsam_testing_utils.py  file_utils.py  validation_utils.py  visualization.py
utils/: cleanup_utils.py  coco_utils.py  io.py  schema_utils.py  vis.py
